@@ -81,7 +81,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 		// follow all flows building up context
 		// use context to fill out addresses on certain instructions
 		ConstantPropagationContextEvaluator eval =
-			new ConstantPropagationContextEvaluator(trustWriteMemOption) {
+			new ConstantPropagationContextEvaluator(monitor, trustWriteMemOption) {
 
 				@Override
 				public boolean evaluateContext(VarnodeContext context, Instruction instr) {
@@ -95,18 +95,26 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 								!instr.getFlowType().isTerminal()) {
 								// need to set the return override
 								instr.setFlowOverride(FlowOverride.RETURN);
+								// get rid of any references that might have been put on from
+								// bad flows
+								ReferenceManager refMgr = program.getReferenceManager();
+								refMgr.removeAllReferencesFrom(instr.getAddress());
 							}
 						}
 						// if LR is a constant and is set right after this, this is a call
 						Varnode lrVal = context.getRegisterVarnodeValue(lrRegister);
 						if (lrVal != null) {
-							if (lrVal.isConstant()) {
+							if (context.isConstant(lrVal)) {
 								long target = lrVal.getAddress().getOffset();
 								Address addr = instr.getMaxAddress().add(1);
 								if (target == addr.getOffset() && !instr.getFlowType().isCall()) {
 									// if there are is a read reference there as well,
 									//  then this is really a branch, not a call
 									if (hasDataReferenceTo(program, addr)) {
+										return false;
+									}
+									// if flow already over-ridden don't override again
+									if (instr.getFlowOverride() != FlowOverride.NONE) {
 										return false;
 									}
 									instr.setFlowOverride(FlowOverride.CALL);
@@ -168,7 +176,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 
 				@Override
 				public boolean evaluateReference(VarnodeContext context, Instruction instr,
-						int pcodeop, Address address, int size, RefType refType) {
+						int pcodeop, Address address, int size, DataType dataType, RefType refType) {
 					if (refType.isJump() && refType.isComputed() &&
 						program.getMemory().contains(address) && address.getOffset() != 0) {
 						if (instr.getMnemonicString().startsWith("tb")) {
@@ -176,24 +184,29 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 						}
 						doArmThumbDisassembly(program, instr, context, address, instr.getFlowType(),
 							true, monitor);
+						super.evaluateReference(context, instr, pcodeop, address, size, dataType, refType);
 						return !symEval.encounteredBranch();
 					}
 					if (refType.isData() && program.getMemory().contains(address)) {
 						if (refType.isRead() || refType.isWrite()) {
+							int numOperands = instr.getNumOperands();
+							// if two operands, then all read/write refs go on the 2nd operand
 							createData(program, address, size);
-							instr.addOperandReference(instr.getNumOperands() - 1, address, refType,
-								SourceType.ANALYSIS);
-							return false;
+							if (numOperands <= 2) {
+								instr.addOperandReference(instr.getNumOperands() - 1, address, refType,
+									SourceType.ANALYSIS);
+								return false;
+							}
+							return true;
 						}
 					}
 					else if (refType.isCall() && refType.isComputed() && !address.isExternalAddress()) {
 						// must disassemble right now, because TB flag could get set back at end of blx
 						doArmThumbDisassembly(program, instr, context, address, instr.getFlowType(),
 							true, monitor);
-						return false;
 					}
 
-					return super.evaluateReference(context, instr, pcodeop, address, size, refType);
+					return super.evaluateReference(context, instr, pcodeop, address, size, dataType, refType);
 				}
 
 				@Override
@@ -217,7 +230,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 				public boolean evaluateReturn(Varnode retVN, VarnodeContext context, Instruction instruction) {
 					// check if a return is actually returning, or is branching with a constant PC
 
-					if (retVN != null && retVN.isConstant()) {
+					if (retVN != null && context.isConstant(retVN)) {
 						long offset = retVN.getOffset();
 						if (offset > 3 && offset != -1) {
 							// need to override the return to a branch
@@ -228,6 +241,12 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 					return false;
 				}
 			};
+			
+		eval.setTrustWritableMemory(trustWriteMemOption)
+		    .setMinpeculativeOffset(minSpeculativeRefAddress)
+		    .setMaxSpeculativeOffset(maxSpeculativeRefAddress)
+		    .setMinStoreLoadOffset(minStoreLoadRefAddress)
+		    .setCreateComplexDataFromPointers(createComplexDataFromPointers);
 
 		AddressSet resultSet = symEval.flowConstants(flowStart, flowSet, eval, true, monitor);
 
@@ -245,7 +264,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 		class SwitchEvaluator implements ContextEvaluator {
 
 			int tableSizeMax = 64;
-			Long assumeValue = new Long(0);
+			Long assumeValue = Long.valueOf(0);
 			Address targetSwitchAddr = null;
 			int addrByteSize = 1;
 			boolean hitTheGuard = false;
@@ -254,7 +273,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 
 			public void init(Address loc, int maxSize) {
 				addrByteSize = 1;
-				assumeValue = new Long(0);
+				assumeValue = Long.valueOf(0);
 				tableSizeMax = maxSize;
 				targetSwitchAddr = loc;
 				hitTheGuard = false;
@@ -264,7 +283,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 			}
 
 			public void initForCase(Long assume) {
-				assumeValue = new Long(assume);
+				assumeValue = Long.valueOf(assume);
 				hitTheGuard = false;
 			}
 
@@ -353,13 +372,13 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 
 			@Override
 			public Address evaluateConstant(VarnodeContext context, Instruction instr, int pcodeop,
-					Address constant, int size, RefType refType) {
+					Address constant, int size, DataType dataType, RefType refType) {
 				return null;
 			}
 
 			@Override
 			public boolean evaluateReference(VarnodeContext context, Instruction instr, int pcodeop,
-					Address address, int size, RefType refType) {
+					Address address, int size, DataType dataType, RefType refType) {
 
 				// if ever see a reference to 0, something went wrong, stop the process
 				if (address == null) {
@@ -433,7 +452,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 							return null;
 						}
 						if (!regName.startsWith("r")) {
-							return new Long(0);
+							return Long.valueOf(0);
 						}
 					}
 					if (hitTheGuard) {
@@ -521,7 +540,7 @@ public class ArmAnalyzer extends ConstantPropagationAnalyzer {
 
 			Address zeroAddr = targetInstr.getMinAddress().getNewAddress(0);
 			for (long assume = 0; assume < switchEvaluator.getTableSizeMax(); assume++) {
-				switchEvaluator.initForCase(new Long(assume));
+				switchEvaluator.initForCase(Long.valueOf(assume));
 
 				targetEval.flowConstants(branchSet.getMinAddress(), branchSet, switchEvaluator,
 					false, monitor);
